# agilex_ws

./: README_EN.md  readme.md
docker/: Dockerfile  docker-compose.yml
src/agilex_piper_arm_description/: CMakeLists.txt  README.md  package.xml
src/agilex_piper_arm_description/config/foxglove/: display_robot.json
src/agilex_piper_arm_description/launch/: display_foxglove.launch.py  display_rviz.launch.py
src/agilex_piper_arm_description/meshes/: flange.STL  probe_tool.STL
src/agilex_piper_arm_description/rviz/: piper_arm_display.rviz
src/agilex_piper_arm_description/urdf/: agilex_piper_arm.urdf.xacro  agilex_piper_arm_macro.xacro  agilex_piper_arm_wi_gripper.urdf.xacro  agilex_piper_gripper_macro.xacro  flange_marco.xacro  probe_marco.xacro
src/agilex_piper_arm_description/urdf/reference/: LICENSE.txt  agilex_piper_arm_ref.urdf  agilex_piper_gripper_ref.urdf
src/agilex_piper_mujoco/: CMakeLists.txt  README.md  package.xml
src/agilex_piper_mujoco/config/: agilex_piper_mujoco_controller.yaml
src/agilex_piper_mujoco/launch/: bringup_mujoco_cartesian_motion_controller.launch.py  bringup_mujoco_joint_position_controller.launch.py  bringup_mujoco_joint_trajectory_controller.launch.py
src/agilex_piper_mujoco/models/agilex_piper/: piper_body.xml
src/agilex_piper_mujoco/models/agilex_piper/assets/: base_link.stl  link1.stl  link2.stl  link2_gray.stl  link2_red.stl  link3.stl  link4.stl  link5.stl  link6.stl  link7.stl  link8.stl  linke2_dark_gray.stl
src/agilex_piper_mujoco/models/demo/: piper_slope_demo.xml
src/agilex_piper_mujoco/models/demo/assets/: bottom_fence_left.stl  bottom_fence_right.stl  bottom_slope.stl  bottom_support_left.stl  bottom_support_right.stl  left_fence.stl  stopper.stl  stopper_left.stl  stopper_right.stl  storage_box.stl  top_fence_left.stl  top_fence_right.stl  top_slope.stl
src/agilex_piper_mujoco/urdf/: agilex_piper.mj.urdf.xacro  agilex_piper.mj_ros2_control.xacro
src/mujoco_demo_robot/: CMakeLists.txt  README.md  package.xml
src/mujoco_demo_robot/config/: cart_effort.yaml
src/mujoco_demo_robot/launch/: cart_effort.launch.py
src/mujoco_ros2_control/mujoco_ros2_control/: CMakeLists.txt  mujoco_ros2_control_plugins.xml  package.xml
src/mujoco_ros2_control/mujoco_ros2_control/include/mujoco_ros2_control/: mujoco_ros2_control.hpp  mujoco_ros2_control_plugin.hpp
src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_ros2_control.cpp  mujoco_ros2_control_node.cpp  mujoco_ros2_control_plugin.cpp
src/mujoco_sim_ros2/: CMakeLists.txt  README.md  package.xml
src/mujoco_sim_ros2/include/mujoco_sim_ros2/: mujoco_physics_plugin.hpp
src/mujoco_sim_ros2/src/: main.cc
